# shadow-council-studio

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE_DECISION_PENDING.md  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  canon_discrepancy.md  feature.md  playtest_finding.md  rfc.md
.github/scripts/: apply_supabase_phase_1_6.py  apply_windows_import_hotfix.py  bootstrap_preview_0_2.py  bootstrap_preview_0_3.py  fix_canon_review_findings.py
.github/workflows/: apply-supabase-phase-1-6.yml  apply-windows-import-hotfix.yml  bootstrap-preview-0.2-pr.yml  bootstrap-preview-0.2.yml  cargo-lock-sync.yml  ci.yml  clippy-debug.yml  database-studio-clippy-debug.yml  database-studio-clippy-fix.yml  database-studio-format.yml  database-studio-rustfmt.yml  fix-canon-review-findings.yml  format-canon-review.yml  format-phase16.yml  phase1-clippy-debug.yml  phase1-clippy-fix.yml  phase1-format.yml  phase16-typecheck-debug.yml  preview-clippy-debug.yml  (+5 more)
apps/desktop/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_foundation.sql  0002_canon_import.sql  0003_database_studio.sql  0004_canon_review.sql  0005_cloud_foundation.sql
apps/desktop/src-tauri/src/: canon_import.rs  canon_review.rs  cloud.rs  database_studio.rs  lib.rs  main.rs
docs/: AGENTS.md  README.md
scripts/: validate-supabase-schema.mjs
skills/: AGENTS.md  README.md
supabase/: config.toml  seed.sql
tools/: README.md
(+66 files in other folders)
