[package]
name = "shadow-council-studio"
version = "0.2.0"
edition = "2024"

[lib]
name = "shadow_council_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20"
